# typo-fixer-cli

./: Cargo.toml  PERFORMANCE.md  README.md  SHAPE_MISMATCH_ANALYSIS.md  demo.py  test_coreml_simple.py  test_inference.rs
configs/: README.md  qwen-typo-fixer-ane.json
src/: cli.rs  lib.rs  main.rs  prompt.rs  typo_fixer.rs
tests/: accuracy_tests.rs  debug_model_issue.rs  debug_tensor_shapes.rs  direct_model_test.rs  download_test.rs  integration_tests.rs  isolate_shape_mismatch_test.rs  model_tests.rs  real_model_tests.rs  shapes_debug_test.rs  shapes_fix_test.rs  tensor_validation_test.rs  typo_fixer_test.rs
tools/: discover_shapes.py
