[package]
name = "typo-fixer-cli"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for fixing typos using fine-tuned Qwen models via candle-coreml"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
# CoreML inference via candle-coreml (local development version)
candle-coreml = { path = ".." }
candle-core = "0.9.1"

# CLI and error handling
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
regex = "1"

# Serialization and async
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
